<menu
        xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="activity.MainActivity">

    <item
            android:id="@+id/less_than_5"
            android:title="@string/less_than_5"
            android:orderInCategory="100"
            app:showAsAction="never"/>
    <item
            android:id="@+id/less_than_10"
            android:title="@string/less_than_10"
            android:orderInCategory="100"
            app:showAsAction="never"/>
    <item
            android:id="@+id/less_than_15"
            android:title="@string/less_than_15"
            android:orderInCategory="100"
            app:showAsAction="never"/>
    <item
            android:id="@+id/less_than_20"
            android:title="@string/less_than_20"
            android:orderInCategory="100"
            app:showAsAction="never"/>
</menu>