<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true"
        android:background="@drawable/starfall">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

        <!-- Pho Tre Bien Logo !-->
        <ImageView
                android:src="@drawable/pho_tre_bien_nice"
                android:scaleType="fitCenter"
                android:layout_width="match_parent" android:layout_height="200dp"
                android:contentDescription="@string/pho_tre_bien_logo2"/>

        <!--  First Name Label -->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColorHint="?attr/colorAccent">
            <EditText android:id="@+id/user_name"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textCapWords"
                      android:hint="@string/first_and_last_name"
                      android:textColorHint="?attr/colorAccent"
                      android:textColor="?attr/colorAccent" android:textAlignment="textEnd"
                      android:fontFamily="sans-serif-smallcaps"/>
        </android.support.design.widget.TextInputLayout>

        <!--  Last Name Label -->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColorHint="?attr/colorAccent">
            <EditText android:id="@+id/user_id"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/employee_id"
                      android:textColorHint="?attr/colorAccent"
                      android:textColor="?attr/colorAccent" android:inputType="phone"
                      android:fontFamily="sans-serif-smallcaps"/>
        </android.support.design.widget.TextInputLayout>


        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColorHint="?attr/colorAccent">
            <EditText android:id="@+id/input_password"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/password2"
                      android:textColorHint="?attr/colorAccent"
                      android:textColor="?attr/colorAccent" android:inputType="numberPassword"
                      android:fontFamily="sans-serif-smallcaps"/>
        </android.support.design.widget.TextInputLayout>

        <!--  Job Title Label -->
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColorHint="@color/accent">
            <Spinner android:id="@+id/user_type"
                     android:theme="@style/MooTheme"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textCapWords"
                     android:hint="@string/job_title"
                     android:textColorHint="@color/accent"
                     android:textColor="@color/accent"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:padding="12dp"
                android:text="@string/create_account"
                android:textColorHint="?attr/colorAccent" android:background="@color/md_amber_400"/>

        <TextView android:id="@+id/link_login"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="24dp"
                  android:text="@string/already_a_member_login"
                  android:gravity="center"
                  android:textSize="16sp" android:textColor="@color/material_drawer_background"/>

    </LinearLayout>
</ScrollView>